# flux-test

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yml  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-validation.yml  deploy-website.yml  publish-to-docker.yml
static/css/: index.css
static/js/: index.js
static/lib/css/: index.css  tailwind.min.css
templates/: index.html
website/: index.html  script.js  styles.css
website/lib/css/: tailwind.min.css
